<resources>
    <string name="app_name">Uzbek Cuisine</string>
    <string name="title1">Wedding Pilaf (Plov)</string>
    <string name="description1">A delightful mixture of rice, bits of meat, grated carrots and
        onions, and raisins (with a clove of roasted garlic on top). The “wedding” part refers to
        the fact that it’s easy to cook in large quantities (traditionally in a kazan over an open
        fire) and is often served on special occasions, like weddings.</string>
    <string name="fullDescription1">\tPlov is the symbol of Uzbek food. It is prepared in every
        Uzbekistan family, whether Uzbek, Russian, Tatar of Korean. Uzbek plov is the part of
        mentality of Uzbekistan people. Traditionally plov is cooked by men.\n\n\tThere are over a
        thousand of recipes of cooking Uzbek plov with various ingredients and even there are some
        cook books dedicated only to this dish.\n\n\tIn various regions of Uzbekistan, people have
        their own recipes of Uzbek plov preparation. For instance, Bukharan people prepare plov with
        green gram. Samarkand plov is light, Fergana plov is brown on the contrary. In Samarkand
        people put meat, carrot, rice in layers and steam it. In Tashkent plov all ingredients are
        roasted at the beginning.\n\n\tCommonly Uzbek plov is cooked with rice, fresh mutton or
        beef, yellow or red carrot, onions and vegetable oil. Traditionally, Uzbek plov is prepared
        in a deep cast-iron pot (kazan), which is uniformly warmed and a dish is not burnt.</string>
    <string name="ingredients1">- 3 cups long grain rice.\n- 1 kg lamb shoulder, cubed.\n- 8 Tbsp
        vegetable oil.\n- 3 medium onions.\n- 1 head of garlic, whole.\n- 1kg carrots
        (yellow if possible).\n- 1 Tbsp coriander, ground.\n- 1 Tbsp paprika.\n- 1 tsp black pepper,
        ground.\n- 4 cloves.\n- 1 tsp cumin, ground.\n- 1 cup of raisins.\n- 1 cup barberries /
        zereshk (opt.).\n- Salt.\n- 3 Tbsp wild black cumin.</string>
    <string name="methods1">1. Place the rice in a bowl and cover with water.\n\n2. Heat a large
        pot. Pour in the oil and add the lamb. Cook on high heat until the meat browns.\n\n3. Cut
        the onions in four and add them to the meat with the head of garlic. Mix and cook for 5
        minutes.\n\n4. Add the spices and enough water to cover the meat and the onions. Cook for
        another 15 minutes.\n\n5. Meanwhile, peel and cut the carrots lengthwise.\n\n\6. Place the
        carrots on the meat. Strain the rice and add it to the pot. Add enough boiling water to
        cover the rice. Shake the pot gently in order to spread the rice evenly.\n\n7. Bring to a
        boil. Sprinkle the raisins, barberries, black cumin and salt into the pot. Cook another 5
        minutes.\n\n8. Reduce the heat to low, cover and cook for another 20 minutes.\n\n9. Garnish
        with pomegranate if you wish. Serve with a tomato and green onion salad.</string>
    <string name="title2">Manty</string>
    <string name="description2">Steamed dumplings sprinkled with dill and served with sour cream.
        Meat, spices, or vegetables can make up the stuffing, so you never know what you’re going
        to get!</string>
    <string name="fullDescription2">\tOnly the Uzbek people could preserve the age-old recipe of
        classical uzbek manti and offered an alternative to the Chinese bamboo lattices, on which
        dumplings were cooked. Yes, this tableware, called manti-kozon (cauldron for manti) or
        "mantyshnitsa" was born in Uzbekistan.\n\n\tUzbek manti is one of the many dishes of Uzbek
        cuisine, which gives scope for the irrepressible imagination of cooks. Only the composition
        of the dough is in fact unchanged, and stuffing safely varies depending on the season and
        taste preferences. So, stuffing can consist of meat, potatoes, greens, turnips, tomato,
        sweet pepper, and even there is manti with pumpkin. The main thing, that onion and dumba
        (fatty tail) would be always on hand in abundance.\n\n\tHowever, the recipe of uzbek manti,
        assuming a part of minced meat, onions and fatty tail is really the most favorite,
        widespread and commonly used.\n\n\tUzbek manti with mutton and onions is a holiday not only
        for the stomach, is a feast for the soul! A large dish of flavored envelopes of the finest
        dough in the middle of the table, the noise and hubbub, sour cream, bowls with hot tea and
        arms, stretching for a new portion of Uzbek manti.</string>
    <string name="ingredients2">- Flour - 500 g.\n- Eggs - 2 pcs.\n- Boiled water - 150 -170 ml.\n-
        Salt - 15 g.\n- For the stuffing: Lamb of average fat content (back or thigh) - 600 gr.\n-
        Fat tail - 100 gr.\n- Onions - 600 g.\n- Salt - 20 g.\n- Ground black pepper - 10 gr.\n-
        Ground zira (cumin) - 5 gr.</string>
    <string name="methods2">1. Knead the dough, as well as for other flour Uzbek dishes, let the
        dough "lie down", after covering it.\n\n2. Half a piece of the dough should be rolled out in
        a large thin sheet, trying to give it a square shape to reduce the number of substandard
        scraps.\n\n3. The rolled out layer we put in the form of an accordion so as to obtain a
        rectangle of 4 layers. Cut the folded dough into equal squares. As a result, we obtain four
        long strips of equal width, about 9–10 centimeters.\n\n4. Repeat all manipulations with the
        second half of the dough. Impose strips on each other and we share them into equal neat
        squares.\n\n5. Now you can start sculpting of Uzbek manti. In the middle of a square of each
        piece of dough we spread the stuffing, potatoes, and then a few pieces of fat. Put together
        the opposite corners of the square. Then, pinch together the edges.\n\n6. The ready manti are
        spread on a sheet of mantovarka (cauldron for manti) greased with oil.\n\n7. Before direct
        cooking of Uzbek manti, you should fill the bottom pan of cauldron with water and put it on
        the fire to make it boil.\n\n8. Uzbek manti should be stewed approximately 45 minutes.\n\n9.
        The result, delicious and very juicy real Uzbek manti, which will be appreciated at true
        worth.</string>
    <string name="title3">Lagman Soup</string>
    <string name="description3">Something of a Central Asian version of ramen, this is a spicy,
        meaty broth filled with chunks of lamb, handspun noodles, and vegetables. It also comes in
        a non-soup version.</string>
    <string name="fullDescription3">\tAlong with pilaf and shashlik, Uzbek lagman is considered one
        of the main national dishes of Uzbekistan. This fragrant Uigur, according to other sources,
        Dungan dish won the recognition of the majority of the Central Asian peoples and Uzbek
        talented chefs added its own original ingredients.\n\n\tThe name "Lagman" is derived from
        the word "lyumyan" translated from Dungan to "stretch the dough." It reflects the main
        feature of cooking lagman: homemade dough for noodles, which is put in the soup, specially
        rolled and hand-drawn.\n\n\tUzbek lagman is very famous and popular dish of Uzbek cuisine.
        Lagman Uzbek noodles is cooked from meat (especially lamb), various vegetables
        (green radish, onion, carrot, bell pepper, etc.) and special long noodles.</string>
    <string name="ingredients3">- 2 tablespoons olive oil.\n- 1 onion, finely chopped.\n- ½ pound
        beef chuck, cut into strips.\n- 1 teaspoon ground cumin.\n- ½ teaspoon ground black pepper.
        \n- 2 tablespoons tomato paste.\n- 1 carrot, cut into thin strips.\n- 1 green bell pepper,
        cut into 1-inch strips.\n- 3 small potatoes, cubed.\n- ½ cup thinly sliced celery.\n- 8 cups
        water.\n- 2 teaspoons salt.\n- ½ cup finely chopped parsley.\n- 3 large cloves garlic,
        minced.\n- 2 (8 ounce) packages thin Chinese noodles.</string>
    <string name="methods3">1. Heat oil in a large pot over high heat. Reduce heat to medium-high;
        cook and stir onion in the hot oil until golden, 3 to 5 minutes. Stir in beef strips, cumin,
        and black pepper; cook until beef is browned, about 5 minutes. Stir in tomato paste and cook
        for 2 to 3 minutes.\n\n2. Stir carrot into the pot; cook until coated with tomato paste, 2 to
        3 minutes. Add green bell pepper; cook for 1 minute. Add potatoes and celery; cook for 5
        minutes. Pour in water; bring to a boil. Season water with salt. Reduce heat to low and
        simmer soup until potatoes are soft, about 40 minutes.\n\n3. Stir parsley and garlic into
        the soup. Simmer until garlic is soft, 10 to 15 minutes.\n\n4. Bring a large pot of lightly
        salted water to a boil. Cook noodles in the boiling water, stirring occasionally, until
        tender yet firm to the bite, 3 to 5 minutes. Rinse and drain well. Divide among serving
        bowls. Ladle hot soup over noodles.</string>
    <string name="title4">Chuchvara Soup</string>
    <string name="description4">A soup in which small dumplings are boiled in salt water or bouillon
        and served with sour milk (“suzma”) and seasoned with pepper, onion, tomato paste,
        black pepper, and sour cream.</string>
    <string name="fullDescription4">\tYou can puzzle for a long time, but never guess what is
        hidden behind such a mysterious name. And chuchvara are fragrant and juicy Uzbek dumplings.
        They differ from the products so familiar to us in their shape and miniature size.
        The serving is also different - they are served floating in a fragrant broth!\n\n\t
    There is nothing tastier and more fragrant than the incomparable homemade chuchvara!
        You will have to tinker with it a little, small dumplings require painstaking work
        in sculpting them. But the result will make you immediately forget about all the efforts
        expended, the food is so tasty.</string>
    <string name="ingredients4">For the dough:\n- 100g water\n- 1/2 Tbs. salt\n- 1 large egg
        \n- 80-110g all purpose flour\nFor the filling:\n- 250g ground meat (lamb or beef)
        \n- 2 onions peeled and finely diced\n- Salt and pepper\n- 5 Tbs. butter
        \n- 4 Tbs. lamb’s tail fat cut into tiny cubes (optional)\n Cayenne pepper
        (for 1 lucky dumpling)\nFor serving:\n- Sour cream or yogurt\n- 2 Tbs. chopped cilantro
    </string>
    <string name="ingredients">Ingredients</string>
    <string name="method">Methods</string>
    <string name="about_app">About App</string>
    <string name="text_about_app">This exciting application provides a collection of the most
        popular dishes in Uzbekistan\'s cuisine, as well as a brief description of each dish,
        a list of ingredients, and instructions on how to prepare each dish in the
        traditional Uzbek way.</string>
    <string name="ok">Ok</string>
</resources>