<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/shape_dialog"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/poppins"
            android:text="@string/about_app"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:justificationMode="inter_word"
            android:layout_marginVertical="@dimen/_8sdp"
            android:fontFamily="@font/poppins"
            android:paddingHorizontal="@dimen/_8sdp"
            android:text="@string/text_about_app"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp" />

        <com.google.android.material.button.MaterialButton
            app:cornerRadius="@dimen/_8sdp"
            android:id="@+id/dialog_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppins"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textStyle="bold" />


    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>