<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.DetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:background="@android:color/transparent"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextColor="@color/white"
            app:contentScrim="@color/color_toolbar"
            app:expandedTitleMarginBottom="@dimen/_16sdp"
            app:expandedTitleMarginStart="@dimen/_16sdp"
            app:expandedTitleTextColor="@color/white"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:statusBarScrim="@android:color/transparent"
            app:title="@string/title3">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/collapsing_image_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/item_photo6"
                app:layout_collapseMode="parallax" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:background="@drawable/overlay_top" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:background="@drawable/ic_background_demo"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_description"
                style="@style/style_content_text"
                android:justificationMode="inter_word"
                android:text="@string/title1" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/secondary_photo"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/photo3" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_200sdp"
                    android:background="@drawable/overlay_bottom" />

            </FrameLayout>



            <androidx.appcompat.widget.AppCompatTextView
                style="@style/style_content_title"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/ingredients"
                app:fontFamily="@font/poppins" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_ingredients"
                style="@style/style_content_text"
                android:justificationMode="inter_word"
                android:text="@string/title1" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/style_content_title"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/method"
                app:fontFamily="@font/poppins" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_methods"
                style="@style/style_content_text"
                android:justificationMode="inter_word"
                android:text="@string/title1" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>